sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:22: error: recursive variable posRouge needs type
  var posRouge=posRouge+1
               ^