sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {

  var lgr=getTaille()
  var red=0
  var blue=0
  var white=0

  for (i <- 0 to (lgr-1)){
    if (getCouleur(i)==BLEU){
      blue+=1
    }
    else if(getCouleur(i)==BLANC){
      white+=1
    }
    else{
      red+=1
    }
  }
  var posBleu=0
  var posBlanc=blue+1
  var posRouge=posRouge+1

  for (j<- 0 to lgr-1){
    if (getCouleur(j)==BLEU){
      if (j>blue){
      	echange(j,posBleu)
      }
      posBleu+=1
    }
    else if(getCouleur(j)==BLANC){
      if ((j>blue)&&(j<lgr-red)){
      }else{
        echange(j,posBlanc)
      }
      posBlanc+=1
    }
    else{
      if (j<(lgr-red)){
      	echange(j,posRouge)
      }
      posRouge+=1
    }
  }
}